Update h2o_cluster_spark.md